--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3307/cicd
 
 spring.datasource.username=root
-spring.datasource.password=root@123
+spring.datasource.password=Root@123
 
 spring.jpa.hibernate.ddl-auto=update
 
